--- a/cursos/MathMethII.html
+++ b/cursos/MathMethII.html
@@ -19,7 +19,7 @@
         
         header {
             position: relative;
-            background: linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7)), url('https://images.unsplash.com/photo-1699720885574-4e83b4ff3b11?q=80&w=2950&auto=format&fit=crop&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D');
+            background: linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7)), url('https://www.cnrs.fr/sites/default/files/styles/top_left/public/image/cnrs_19990001_0046_web_0.jpg?h=b457384a&itok=JeYXogcs');
             background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
